--- a/app/src/main/res/layout/order_recycler_item.xml
+++ b/app/src/main/res/layout/order_recycler_item.xml
@@ -1,137 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-   >
+    android:layout_margin="10dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="3"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/shirtimage"
+            android:layout_weight="1"
+            android:src="@drawable/image"/>
+        <TextView
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="TDFDSF"
+            android:paddingRight="10dp"
+            android:id="@+id/name"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="price"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:fontFamily="@font/poppins"
+            android:layout_gravity="center"
+            android:id="@+id/price"/>
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="8dp">
+            android:layout_margin="8dp"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_margin="5dp"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
                     android:id="@+id/receivedimage"
-                    android:src="@drawable/circle"/>
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/circle" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/poppins"
                     android:text="Order received"
-                    android:textSize="12sp"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="@font/poppins"
                     android:textColor="@color/black"
-                    android:layout_gravity="center"/>
+                    android:textSize="12sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_margin="5dp"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/circle"/>
+                    android:src="@drawable/circle" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/poppins"
                     android:text="Packing"
-                    android:textSize="12sp"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="@font/poppins"
                     android:textColor="@color/black"
-                    android:layout_gravity="center"/>
+                    android:textSize="12sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_margin="5dp"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/circle"/>
+                    android:src="@drawable/circle" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/poppins"
                     android:text="On the way"
-                    android:textSize="12sp"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="@font/poppins"
                     android:textColor="@color/black"
-                    android:layout_gravity="center"/>
+                    android:textSize="12sp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_margin="5dp"
-                >
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/circle"/>
+                    android:src="@drawable/circle" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Delivered"
-                    android:textSize="12sp"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
                     android:fontFamily="@font/poppins"
+                    android:text="Delivered"
                     android:textColor="@color/black"
-                    android:layout_gravity="center"/>
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/details"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins"
                 android:layout_gravity="end"
-android:text="address"
-                android:id="@+id/address"/>
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins"
+                android:text="address" />
+
             <TextView
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:id="@+id/status"/>
+                android:visibility="gone" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/productid"
-                android:visibility="gone"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
             <TextView
+                android:id="@+id/size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins"
                 android:textAllCaps="true"
-                android:visibility="gone"
-                android:id="@+id/size"/>
+                android:visibility="gone" />
 
 
         </LinearLayout>
     </LinearLayout>
 
+</LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
